--- a/agenda.html
+++ b/agenda.html
@@ -141,9 +141,14 @@
                                         <td><span class="tdtitle">ESTEBAN ECHEVERRÍA, Buenos Aires </span><br>
                                             Primer Congreso de Pastores<br>
                                             Consejo Unido de Pastores de Esteban Echeverría.</td>
-                                            </tr>                                        
-                                    </tr>
-                                    <tr>
+                                            </tr>         
+                                        <td scope="row" style="text-align: center;">
+                                            ABR<br><span class="date">10</span></td>
+                                        <td><span class="tdtitle">CABA, Flores </span><br>
+                                            Asamblea de Dios, Flores de 10 a 18 hs. <br>
+                                            Av. Juan Bautista Alberdi 2941.</td>
+                                            </tr>       
+                                     <tr>
                                         <td scope="row" style="text-align: center;">
                                             MAR<br><span class="date">21</span></td>
                                         <td><span class="tdtitle">MERLO, San Luis</span><br>
