--- a/agenda.html
+++ b/agenda.html
@@ -144,8 +144,8 @@
                                             </tr>         
                                         <td scope="row" style="text-align: center;">
                                             ABR<br><span class="date">10</span></td>
-                                        <td><span class="tdtitle">CABA, Flores </span><br>
-                                            Asamblea de Dios, Flores de 10 a 18 hs. <br>
+                                        <td><span class="tdtitle">CABA, Ciudad Autónoma de Buenos Aires </span><br>
+                                            Asamblea de Dios de Flores, de 10 a 18 hs. <br>
                                             Av. Juan Bautista Alberdi 2941.</td>
                                             </tr>       
                                      <tr>
