--- a/prensa.html
+++ b/prensa.html
@@ -98,6 +98,14 @@
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
                         <h2 class="title">Notas de Prensa</h2>
+                        <a href="https://www.adnciudad.com/index.php/8005-los-celestes-contra-la-ile" target="_blank">
+                            <div class="pbox1">
+                                <div class="pressImg" style="background-image: url('./assets/img/11.jpg')"></div>
+                                <p>Los celestes contra la ILE
+                                    <span class="date"><br>18/12/19</span></p>
+                            </div>
+                        </a>
+
                         <a href="http://www.laprensa.com.ar/481070-Dia-de-la-Etica-Medica-alcanzada-por-la-devaluacion.note.aspx" target="_blank">
                             <div class="pbox1 pbox2">
                                 <div class="pressImg" style="background-image: url('http://www.laprensa.com.ar/multimedios/imgs/108374_620.jpg')"></div>
