--- a/agenda.html
+++ b/agenda.html
@@ -148,7 +148,14 @@
                                             Asamblea de Dios de Flores, de 10 a 18 hs. <br>
                                             Av. Juan Bautista Alberdi 2941.</td>
                                             </tr>       
-                                     <tr>
+                                      <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            MAR<br><span class="date">28</span></td>
+                                        <td><span class="tdtitle">CABA, Ciudad de Buenos Aires </span><br>
+                                            MARCHA POR LA VIDA<br>
+                                            Plaza Italia, CABA | 14:00 hs.</td>
+                                            </tr>
+                                        <tr>
                                         <td scope="row" style="text-align: center;">
                                             MAR<br><span class="date">21</span></td>
                                         <td><span class="tdtitle">MERLO, San Luis</span><br>
@@ -161,6 +168,13 @@
                                         <td><span class="tdtitle">QUILMES, provincia de Buenos Aires </span><br>
                                             Campamento de Jóvenes<br>
                                             Iglesia del Puente, Quilmes.</td>
+                                            </tr>
+                                       <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            ENE<br><span class="date">18</span></td>
+                                        <td><span class="tdtitle">CABA, Ciudad Autónoma de Buenos Aires </span><br>
+                                            Acto frente al Hospital Piñero por la censurara de murales provida<br>
+                                            Av. Varela 1301, CABA | 15:00 hs.</td>
                                             </tr>
                                     </tr>
                                 </tbody>
