--- a/agenda.html
+++ b/agenda.html
@@ -151,7 +151,7 @@
                                       <tr>
                                         <td scope="row" style="text-align: center;">
                                             MAR<br><span class="date">28</span></td>
-                                        <td><span class="tdtitle">CABA, Ciudad de Buenos Aires </span><br>
+                                        <td><span class="tdtitle">CABA, Ciudad Autónoma de Buenos Aires </span><br>
                                             MARCHA POR LA VIDA<br>
                                             Plaza Italia, CABA | 14:00 hs.</td>
                                             </tr>
@@ -173,7 +173,7 @@
                                         <td scope="row" style="text-align: center;">
                                             ENE<br><span class="date">18</span></td>
                                         <td><span class="tdtitle">CABA, Ciudad Autónoma de Buenos Aires </span><br>
-                                            Acto frente al Hospital Piñero por la censurara de murales provida<br>
+                                            Acto frente al Hospital Piñero por la censura de murales provida<br>
                                             Av. Varela 1301, CABA | 15:00 hs.</td>
                                             </tr>
                                     </tr>
