--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </title>
     <!-- meta tag-->
     <meta property="og:title" content="Gabriel Ballerini" />
-    <meta property="og:description" content="Teólogo. Especialista en Ética Biomédica. Pastor">
+    <meta property="og:description" content="Conferencista. Militante provida.">
     <meta property="og:type" content="Página Oficial" />
     <meta property="og:url" content="http://www.gabrielballerini.com/" />
     <meta property="og:image" content="https://b.imge.to/2019/07/21/H3xzO.jpg" />
