--- a/agenda.html
+++ b/agenda.html
@@ -120,13 +120,19 @@
                                         Congreso Apologético 2020 <br>
                                         Centro Evangélico Mennonita de Teología Asunción (CEMTA) 
                                            </td>
-                                    
+                                    <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            JUL<br><span class="date">19</span></td>
+                                        <td><span class="tdtitle">SÁENZ PEÑA, Chaco</span><br>
+                                        Retiro Regional de Maestros de Educación Cristiana <br>
+                                        Iglesia de Dios 
+                                           </td>
                                     <tr>
                                         <td scope="row" style="text-align: center;">
                                             MAY<br><span class="date">15</span></td>
                                         <td><span class="tdtitle">SAN JOSÉ, Costa Rica</span><br>
                                         <br>
-                                        </td>
+                                        Vida Abundante, Coronado</td>
                                     </tr>
                                     <tr>
                                         <td scope="row" style="text-align: center;">
