--- a/agenda.html
+++ b/agenda.html
@@ -12,7 +12,7 @@
     </title>
     <!-- meta tag-->
     <meta property="og:title" content="Gabriel Ballerini" />
-    <meta property="og:description" content="Teólogo. Especialista en Ética Biomédica. Pastor">
+    <meta property="og:description" content="Conferencista. Militante provida">
     <meta property="og:type" content="Página Oficial" />
     <meta property="og:url" content="http://www.gabrielballerini.com/" />
     <meta property="og:image" content="https://b.imge.to/2019/07/21/H3xzO.jpg" />
@@ -126,6 +126,13 @@
                                         <td><span class="tdtitle">SÁENZ PEÑA, Chaco</span><br>
                                         Retiro Regional de Maestros de Educación Cristiana <br>
                                         Iglesia de Dios 
+                                           </td>
+                                    <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            JUL<br><span class="date">15</span></td>
+                                        <td><span class="tdtitle">SÁENZ PEÑA, Chaco</span><br>
+                                        Congreso Internacional de Pastores y Líderes <br>
+                                        Centro Cristiano Puerta Abierta 
                                            </td>
                                     <tr>
                                         <td scope="row" style="text-align: center;">
