--- a/agenda.html
+++ b/agenda.html
@@ -113,6 +113,13 @@
                             <table class="table">
                                 <tbody>
                                     <tr>
+                                         <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            SEP<br><span class="date">11</span></td>
+                                        <td><span class="tdtitle">MALVINAS ARGENTINAS, Buenos Aires</span><br>
+                                        Encuentro Regional de Docentes <br>
+                                        Docentes del Reino 
+                                           </td>
                                        <tr>
                                         <td scope="row" style="text-align: center;">
                                             SEP<br><span class="date">05</span></td>
