--- a/agenda.html
+++ b/agenda.html
@@ -152,7 +152,15 @@
                                         <td scope="row" style="text-align: center;">
                                             MAY<br><span class="date">2</span></td>
                                         <td><span class="tdtitle">GENERAL RODRÍGUEZ, Buenos Aires</span><br>
-                                        Retiro Regional Zona Oeste y Zona Norte <br>
+                                        Retiro Regional Zona Oeste, Sur y Norte <br>
+                                        Asociación Nacional de Pastores Bautistas (ANPB) <br>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            ABR<br><span class="date">24</span></td>
+                                        <td><span class="tdtitle">CÓRDOBA, Ciudad</span><br>
+                                        Retiro Regional de Pastores y Líderes<br>
                                         Asociación Nacional de Pastores Bautistas (ANPB) <br>
                                         </td>
                                     </tr>
@@ -181,7 +189,12 @@
                                         <td><span class="tdtitle">MERLO, San Luis</span><br>
                                         <br>
                                         </td>
-                                        
+                                        <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            MAR<br><span class="date">7</span></td>
+                                        <td><span class="tdtitle">AVELLANEDA, Buenos Aires</span><br>
+                                            "La pastoral en la crisis argentina"<br>
+                                            Consejo Pastoral de Avellaneda, Pierres 55.</td>
                                         <tr>
                                         <td scope="row" style="text-align: center;">
                                             FEB<br><span class="date">23</span></td>
