--- a/agenda.html
+++ b/agenda.html
@@ -142,6 +142,14 @@
                                         Centro Cristiano Puerta Abierta 
                                            </td>
                                     <tr>
+                                    <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            JUN<br><span class="date">13</span></td>
+                                        <td><span class="tdtitle">ROSARIO, Santa Fe</span><br>
+                                        Congreso Nacional de Docentes Cristianos <br>
+                                        Rosario 
+                                           </td>
+                                    <tr>
                                         <td scope="row" style="text-align: center;">
                                             MAY<br><span class="date">15</span></td>
                                         <td><span class="tdtitle">SAN JOSÉ, Costa Rica</span><br>
