--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </title>
     <!-- meta tag-->
     <meta property="og:title" content="Gabriel Ballerini" />
-    <meta property="og:description" content="Conferencista. Militante provida.">
+    <meta property="og:description" content="Conferencista. Activista provida.">
     <meta property="og:type" content="Página Oficial" />
     <meta property="og:url" content="http://www.gabrielballerini.com/" />
     <meta property="og:image" content="https://b.imge.to/2019/07/21/H3xzO.jpg" />
@@ -104,7 +104,7 @@
                     <div class="col-md-8 ml-auto mr-auto">
                         <h2 class="title">Biografía</h2>
                         <img src="./assets/img/bio.jpg" class="text-img">
-                        <p>Conservador, incansable activista provida y antagonista del progrefascismo. Especializado con una maestría en Ética Biomédica cursada en el Instituto de Bioética de la Facultad de Ciencias Médicas de la Pontificia Universidad Católica Argentina (UCA), es además, licenciado y profesor de Nivel Medio y Superior en Teología, graduado en el Seminario Internacional Teológico Bautista (SITB) de Buenos Aires.</p>
+                        <p>Conservador, incansable activista provida y antagonista del progresocialismo. Especializado con una maestría en Ética Biomédica cursada en el Instituto de Bioética de la Facultad de Ciencias Médicas de la Pontificia Universidad Católica Argentina (UCA), es además, licenciado y profesor de Nivel Medio y Superior en Teología, graduado en el Seminario Internacional Teológico Bautista (SITB) de Buenos Aires.</p>
                         <p>Actualmente sus concurridas conferencias nacionales e internacionales están ayudando a concienciar sobre la batalla cultural, espiritual, ideológica y política que se vive en todo el continente; como así también a desenmascarar la ideología de género y combatir al progrefascismo abortista, siendo uno de los referentes argentinos más reconocidos en la defensa de la vida, la familia y la conservación de los buenos valores.</p>
                         <p>Como bioeticista fue miembro titular y fundador del Comité de Bioética del Complejo Médico de la Policía Federal Argentina Churruca-Visca, uno de los hospitales universitarios más destacados del país. Se ha desempeñado como director de educación cristiana de la Confederación Evangélica Bautista (CEB) y como director de Bioética de la Alianza Cristiana de Iglesias Evangélicas de la República Argentina (ACIERA). Durante 2018 fue invitado para exponer en la Cámara de Diputados del Congreso de la Nación en el debate contra el proyecto de ley que ha querido despenalizar y legalizar el aborto en Argentina. Es invitado frecuentemente a participar en distintos programas de televisión como tenaz defensor de la vida.</p>
                         <p>Miembro de la Junta Directiva de la Confederación Evangélica Bautista Argentina. Junto a su esposa Cecilia han desarrollado la docencia y el ministerio pastoral por más de veinte años. Son papás de Luciana y Mateo.</p>
