--- a/gallery.html
+++ b/gallery.html
@@ -60,9 +60,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Agenda" data-placement="bottom" href="agenda.html">
-                            <i class="fa fa-calendar"></i>
-                            <p class="d-md-none">Agenda</p>
+                        <a class="nav-link" rel="tooltip" title="Fotos" data-placement="bottom" href="gallery.html">
+                            <i class="fa fa-picture-o"></i>
+                            <p class="d-md-none">Fotos</p>
                         </a>
                     </li>
                     <li class="nav-item">
