--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:type" content="Página Oficial" />
     <meta property="og:url" content="http://www.gabrielballerini.com/" />
     <meta property="og:image" content="https://b.imge.to/2019/07/21/H3xzO.jpg" />
+    <meta name="description" content="Conservador, incansable activista provida y antagonista del progresocialismo. Especializado con una maestría en Ética Biomédica.">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
