--- a/prensa.html
+++ b/prensa.html
@@ -320,7 +320,7 @@
                         </a>
                         <a href="https://www.telam.com.ar/notas/201804/266439-un-gran-contraste-entre-las-marchas-del-8m-y-el-25m.html" target="_blank">
                             <div class="pbox1 pbox2">
-                                <div class="pressImg" style="background-image: url('https://gba.gob.ar/sites/default/files/salud/imagenes/medico5.jpg');"></div>
+                                <div class="pressImg" style="background-image: url('./assets/img/marcha.jpg');"></div>
                                 <p>Un gran contraste entre las marchas del 8M y el 25M
                                     <span class="date"><br>03/04/18</span></p>
                             </div>s
